# aipg

./: CMakeLists.txt  GRAMMAR.md  README.md
.github/workflows/: test.yml
include/aipg/: aipg.hpp
src/: aipg.cpp
templates/: hasOperandOptionalValue.j2  header.j2  insCheckLoop.j2  insCheckSingle.j2  isDefinedFprMatching.j2  isDefinedGprMatching.j2  isDefinedImmMatching.j2  isDefinedLabMatching.j2  isInsnMatching.j2  isMnemonicMatching.j2  isVariableFprMatching.j2  isVariableGprMatching.j2  isVariableImmMatching.j2  isVariableLabMatching.j2  source.j2
test/: parse_test.cpp  test.cpp
test/idioms/: LabelTest.idiom  Udiv.idiom
